--- a/index.html
+++ b/index.html
@@ -16,33 +16,31 @@
       <div id= "calc" class="container">
         <div class="row">
 
-          <div class="col">Solution</div>
+          <div id = "solution" class="col">Solution</div>
 
           <div class="w-100"></div>
-          <div class="col">7</div>
-          <div class="col">8</div>
-          <div class="col">9</div>
-          <div class="col">x</div>
+          <div id = "7" class="col">7</div>
+          <div id = "8" class="col">8</div>
+          <div id = "9" class="col">9</div>
+          <div id = "mult" class="col">x</div>
 
           <div class="w-100"></div>
-          <div class="col">4</div>
-          <div class="col">5</div>
-          <div class="col">6</div>
-          <div class="col">/</div>
+          <div id = "4" class="col">4</div>
+          <div id = "5" class="col">5</div>
+          <div id = "6" class="col">6</div>
+          <div id = "div" class="col">/</div>
 
           <div class="w-100"></div>
-          <div class="col">1</div>
-          <div class="col">2</div>
-          <div class="col">3</div>
-          <div class="col">+</div>
+          <div id = "1" class="col">1</div>
+          <div id = "2" class="col">2</div>
+          <div id = "3" class="col">3</div>
+          <div id = "plus" class="col">+</div>
 
           <div class="w-100"></div>
-          <div class="col">0</div>
-          <div class="col">.</div>
-          <div class="col">=</div>
-          <div class="col">-</div>
-
-
+          <div id = "0" class="col">0</div>
+          <div id = "period" class="col">.</div>
+          <div id=  "equals"   class="col">=</div>
+          <div id = "minus" class="col">-</div>
 
         </div>
       </div>
