Changed colors, still need to implement pi

--- a/index.html
+++ b/index.html
@@ -19,24 +19,34 @@
           <div id = "solution" class="col">Solution</div>
 
           <div class="w-100"></div>
+          <div id = "#" class="col"></div>
+          <div id = "#" class="col"></div>
+          <div id = "#" class="col"></div>
+          <div id = "clear" class="col">AC</div>
+
+          <div class="w-100"></div>
+          <div id = "sin" class="col">sin</div>
           <div id = "7" class="col">7</div>
           <div id = "8" class="col">8</div>
           <div id = "9" class="col">9</div>
           <div id = "mult" class="col">x</div>
 
           <div class="w-100"></div>
+          <div id = "cos" class="col">cos</div>
           <div id = "4" class="col">4</div>
           <div id = "5" class="col">5</div>
           <div id = "6" class="col">6</div>
           <div id = "div" class="col">/</div>
 
           <div class="w-100"></div>
+          <div id = "tan" class="col">tan</div>
           <div id = "1" class="col">1</div>
           <div id = "2" class="col">2</div>
           <div id = "3" class="col">3</div>
           <div id = "plus" class="col">+</div>
 
           <div class="w-100"></div>
+          <div id = "arc" class="col">arc</div>
           <div id = "0" class="col">0</div>
           <div id = "period" class="col">.</div>
           <div id=  "equals"   class="col">=</div>
