--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div id= "calc" class="container">
         <div class="row">
 
-          <div id = "solution" class="col">Solution</div>
+          <div id = "solution" class="col">Calculator</div>
 
           <div class="w-100"></div>
           <div id = "#" class="col"></div>
