--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div id = "plus" class="col">+</div>
 
           <div class="w-100"></div>
-          <div id = "arc" class="col">arc</div>
+          <div id = "arc" class="col"></div>
           <div id = "0" class="col">0</div>
           <div id = "period" class="col">.</div>
           <div id=  "equals"   class="col">=</div>
