--- a/index.html
+++ b/index.html
@@ -22,32 +22,32 @@
           <td><button>...</button></td>
           <td><button>...</button></td>
           <td><button>...</button></td>
-          <td id="clear"><button>AC</button></td>
+          <td class="clear"><button>AC</button></td>
         </tr>
         <tr>
           <td id="sin"><button>sin</button></td>
-          <td id="7"  ><button>7</button></td>
-          <td id="8"  ><button>8</button></td>
-          <td id="9"  ><button>9</button></td>
+          <td id="num7"  ><button>7</button></td>
+          <td id="num8"  ><button>8</button></td>
+          <td id="num9"  ><button>9</button></td>
           <td id="mult"  ><button>x</button></td>
         </tr>
         <tr>
           <td id="cos"><button>cos</button></td>
-          <td id="4"><button>4</button></td>
-          <td id="5"><button>5</button></td>
-          <td id="6"><button>6</button></td>
+          <td id="num4"><button>4</button></td>
+          <td id="num5"><button>5</button></td>
+          <td id="num6"><button>6</button></td>
           <td id="div"><button>/</button></td>
         </tr>
         <tr>
           <td id="tan"><button>tan</button></td>
-          <td id="1"><button>1</button></td>
-          <td id="2"><button>2</button></td>
-          <td id="3"><button>3</button></td>
+          <td id="num1"><button>1</button></td>
+          <td id="num2"><button>2</button></td>
+          <td id="num3"><button>3</button></td>
           <td id="plus"><button>+</button></td>
         </tr>
         <tr>
-          <td id="anotherClear"><button>AC</button></td>
-          <td id="0"><button>0</button></td>
+          <td class="clear"><button>AC</button></td>
+          <td id="num0"><button>0</button></td>
           <td id="period"><button>.</button></td>
           <td id="equals"><button>=</button></td>
           <td id="minus"><button>-</button></td>
@@ -58,7 +58,6 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="main.js"></script>
