Eliminated jQuery and cleaned code significantly

--- a/index.html
+++ b/index.html
@@ -22,35 +22,35 @@
           <td><button>...</button></td>
           <td><button>...</button></td>
           <td><button>...</button></td>
-          <td class="clear"><button>AC</button></td>
+          <td><button>...</button></td>
         </tr>
         <tr>
-          <td id="sin"><button>sin</button></td>
-          <td id="num7"  ><button>7</button></td>
-          <td id="num8"  ><button>8</button></td>
-          <td id="num9"  ><button>9</button></td>
-          <td id="mult"  ><button>x</button></td>
+          <td class ="trig"><button>sin</button></td>
+          <td class="basicMath"  ><button>7</button></td>
+          <td class="basicMath"  ><button>8</button></td>
+          <td class="basicMath"  ><button>9</button></td>
+          <td class="basicMath"  ><button>x</button></td>
         </tr>
         <tr>
-          <td id="cos"><button>cos</button></td>
-          <td id="num4"><button>4</button></td>
-          <td id="num5"><button>5</button></td>
-          <td id="num6"><button>6</button></td>
-          <td id="div"><button>/</button></td>
+          <td class="trig"><button>cos</button></td>
+          <td class="basicMath"><button>4</button></td>
+          <td class="basicMath"><button>5</button></td>
+          <td class="basicMath"><button>6</button></td>
+          <td class="basicMath"><button>/</button></td>
         </tr>
         <tr>
-          <td id="tan"><button>tan</button></td>
-          <td id="num1"><button>1</button></td>
-          <td id="num2"><button>2</button></td>
-          <td id="num3"><button>3</button></td>
-          <td id="plus"><button>+</button></td>
+          <td class="trig"><button>tan</button></td>
+          <td class="basicMath"><button>1</button></td>
+          <td class="basicMath"><button>2</button></td>
+          <td class="basicMath"><button>3</button></td>
+          <td class="basicMath"><button>+</button></td>
         </tr>
         <tr>
-          <td class="clear"><button>AC</button></td>
-          <td id="num0"><button>0</button></td>
-          <td id="period"><button>.</button></td>
+          <td id="clear"><button>AC</button></td>
+          <td class="basicMath"><button>0</button></td>
+          <td class="basicMath"><button>.</button></td>
           <td id="equals"><button>=</button></td>
-          <td id="minus"><button>-</button></td>
+          <td class="basicMath"><button>-</button></td>
         </tr>
       </table>
     </div>
