Fixed minor bugs in js

--- a/index.html
+++ b/index.html
@@ -24,32 +24,32 @@
           <td><button>...</button></td>
         </tr>
         <tr>
-          <td class ="trig"><button>sin</button></td>
-          <td class="basicMath"  ><button>7</button></td>
-          <td class="basicMath"  ><button>8</button></td>
-          <td class="basicMath"  ><button>9</button></td>
-          <td class="basicMath"  ><button>x</button></td>
+          <td class ="trig"><button class = "arithmetic">sin</button></td>
+          <td class="basicMath"><button>7</button></td>
+          <td class="basicMath"><button>8</button></td>
+          <td class="basicMath"><button>9</button></td>
+          <td class="basicMath"><button class = "arithmetic">x</button></td>
         </tr>
         <tr>
-          <td class="trig"><button>cos</button></td>
+          <td class="trig"><button class = "arithmetic">cos</button></td>
           <td class="basicMath"><button>4</button></td>
           <td class="basicMath"><button>5</button></td>
           <td class="basicMath"><button>6</button></td>
-          <td class="basicMath"><button>/</button></td>
+          <td class="basicMath"><button class = "arithmetic">/</button></td>
         </tr>
         <tr>
-          <td class="trig"><button>tan</button></td>
+          <td class="trig"><button class = "arithmetic">tan</button></td>
           <td class="basicMath"><button>1</button></td>
           <td class="basicMath"><button>2</button></td>
           <td class="basicMath"><button>3</button></td>
-          <td class="basicMath"><button>+</button></td>
+          <td class="basicMath"><button class = "arithmetic">+</button></td>
         </tr>
         <tr>
           <td id="clear"><button>AC</button></td>
           <td class="basicMath"><button>0</button></td>
           <td class="basicMath"><button>.</button></td>
           <td id="equals"><button>=</button></td>
-          <td class="basicMath"><button>-</button></td>
+          <td class="basicMath"><button class = "arithmetic">-</button></td>
         </tr>
       </table>
     </div>
